--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
+        "build": "vite build",
         "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
     "dependencies": {
+        "gsap": "^3.12.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "scrollreveal": "^4.0.9"
+        "react-router-dom": "^6.15.0",
+        "sass": "^1.66.1",
+        "scrollreveal": "^4.0.9",
+        "scss": "^0.2.4",
+        "split-type": "^0.3.3"
     },
     "devDependencies": {
         "@types/react": "^18.0.37",
